tidy up form.html css

--- a/main/src/main/java/org/mobilitydata/gtfsvalidator/viewer/index.css
+++ b/main/src/main/java/org/mobilitydata/gtfsvalidator/viewer/index.css
@@ -37,20 +37,12 @@ button {
 
 pre { background: #ddd; }
 
-.trip-id {
-    font-weight: bold;
-    list-style-type: none;
-    padding-left: 0;
-}
 
 /* Form */
 h1 {
-    width:50%;
     margin:20px auto;
     padding:30px;
-    position:relative;
-    border-radius:5px;
-    box-shadow:0 0 15px 5px #ccc;
+    text-align: center;
 }
 
 form.table-like {
