--- a/web/client/src/css/components/markdown.css
+++ b/web/client/src/css/components/markdown.css
@@ -36,8 +36,12 @@
     @apply rounded;
   }
 
+  p {
+    @apply mb-4;
+  }
+
   ol, ul {
-    @apply my-3;
+    @apply my-4;
     @apply pl-6;
   }
 
@@ -57,6 +61,10 @@
     @apply align-baseline;
     @apply px-3 py-2;
     @apply text-left;
+
+    p {
+      @apply m-0;
+    }
   }
 
   th {
